syntax = "proto3";

package user;

service UserService {
  rpc GetCompanyIdByUserId (GetCompanyIdRequest) returns (GetCompanyIdResponse);
  rpc GetCompaniesDetails (CompaniesRequest) returns (CompaniesResponse);
}

message GetCompanyIdRequest {
  string userId = 1; 
}

message GetCompanyIdResponse {
  string companyId = 1; 
}


message CompaniesRequest {
  repeated string companyIds = 1;  
}

message CompanyDetails {
  string id = 1;
  string companyName = 2;
  string location = 3;
  string logo = 4;
}

message CompaniesResponse {
  repeated CompanyDetails companies = 1;  
}
